# gramina

./: .gitignore  CMakeLists.txt  README.md
examples/: binary_search.c  binary_search.lawn  compare.lawn  extern.c  extern.lawn  factorial.c  factorial.lawn  prime.c  prime.lawn  structs.c  structs.lawn  sum.c  sum.lawn  vector2.c  vector2.lawn
examples/linking/: bar.lawn  baz.lawn  foo.lawn
include/cli/: etc.h  help.h  highlight.h  state.h  tu.h
include/common/: arg.h  array.h  def.h  error.h  hashmap.h  init.h  log.h  mem.h  str.h  stream.h  subprocess.h
include/compiler/: access.h  arithmetic.h  compiler.h  conversions.h  cstate.h  errors.h  expressions.h  function.h  identifier.h  logic.h  mem.h  op.h  scope.h  stackops.h  statement.h  struct.h  type.h  typedecl.h  value.h
include/parser/: ast.h  attributes.h  lexer.h  parser.h  token.h
scripts/: clean_examples.sh  gen_extra_includes.py  regexes.py  run_example.sh
src/: test.c
src/cli/: args.c  help.c  highlight.c  linker.c  machine.c  main.c  state.c  tu.c
src/common/: arg.c  error.c  hashmap.c  init.c  log.c  str.c  stream.c  subprocess.c
src/compiler/: access.c  arithmetic.c  compiler.c  conversions.c  errors.c  expressions.c  function.c  identifier.c  logic.c  mem.c  op.c  scope.c  stackops.c  statement.c  struct.c  type.c  value.c
src/parser/: ast.c  attributes.c  lexer.c  parser.c  token.c
tests/: unit.c
tests/gramina/: array_float_len.lawn  array_negative_len.lawn  array_ok.lawn  const_assign.lawn  const_ptr_arg.lawn  const_ptr_bad_assign.lawn  const_ptr_bad_init.lawn  exit.lawn  helper.c  matmul.lawn  slice_ref.lawn
tests/include/: tester.h  tests.h
tests/unit/: array.c  exit.c  hello.c  pipe.c  slice.c  sstream.c  type.c
tests/utils/: tester.c
tools/queries/: highlights.scm
tools/treesitter/: grammar.js  tree-sitter.json
